force-app/main/default/objects/Forrester_FISCAL_YEAR__x/Forrester_FISCAL_YEAR__x.object-meta.xml
<CustomObject>
    <description>Forrester_FISCAL_YEAR</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_FISCAL_YEAR</externalName>
    <label>Forrester_FISCAL_YEAR</label>
    <pluralLabel>Forrester_FISCAL_YEAR</pluralLabel>
</CustomObject>