force-app/main/default/objects/Forrester_FISCAL_YEAR__x/fields/ADD_DATE__c.field-meta.xml
<CustomField>
    <fullName>ADD_DATE__c</fullName>
    <description>ADD_DATE</description>
    <externalDeveloperName>ADD_DATE</externalDeveloperName>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>