force-app/main/default/objects/Forrester_FISCAL_YEAR__x/fields/BEGIN_DATE__c.field-meta.xml
<CustomField>
    <fullName>BEGIN_DATE__c</fullName>
    <description>BEGIN_DATE</description>
    <externalDeveloperName>BEGIN_DATE</externalDeveloperName>
    <label>Begin Date</label>
    <type>DateTime</type>
</CustomField>