force-app/main/default/objects/Forrester_FISCAL_YEAR__x/fields/CRDR_PREPAY_CUTOFF_DATE__c.field-meta.xml
<CustomField>
    <fullName>CRDR_PREPAY_CUTOFF_DATE__c</fullName>
    <description>CRDR_PREPAY_CUTOFF_DATE</description>
    <externalDeveloperName>CRDR_PREPAY_CUTOFF_DATE</externalDeveloperName>
    <label>CRDR Prepay Cutoff Date</label>
    <type>DateTime</type>
</CustomField>