force-app/main/default/objects/Forrester_FISCAL_YEAR__x/fields/FY__c.field-meta.xml
<CustomField>
    <fullName>FY__c</fullName>
    <description>FY</description>
    <externalDeveloperName>FY</externalDeveloperName>
    <label>FY</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>