force-app/main/default/objects/Forrester_FISCAL_YEAR__x/fields/NEXT_EXPENSE_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>NEXT_EXPENSE_NUMBER__c</fullName>
    <description>NEXT_EXPENSE_NUMBER</description>
    <externalDeveloperName>NEXT_EXPENSE_NUMBER</externalDeveloperName>
    <label>Next Expense Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>