force-app/main/default/objects/Forrester_FISCAL_YEAR__x/fields/OPEN_FOR_EXPENSES_FLAG__c.field-meta.xml
<CustomField>
    <fullName>OPEN_FOR_EXPENSES_FLAG__c</fullName>
    <description>OPEN_FOR_EXPENSES_FLAG</description>
    <externalDeveloperName>OPEN_FOR_EXPENSES_FLAG</externalDeveloperName>
    <label>Open for Expenses Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>